remove all keys with empty strings, un-escape some escaped unicode
copy i18n.json over en.json on run
remove obsolete keys from en.json

--- a/src/locale/ja.json
+++ b/src/locale/ja.json
@@ -360,7 +360,7 @@
     "Clear": "フィルターをクリア",
     "CompareMatching": "アイテムを比較する",
     "DeleteSearch": "検索の削除",
-    "FilterHelp": "検索\u3000アイテム/パーク, {{example}},",
+    "FilterHelp": "検索　アイテム/パーク, {{example}},",
     "FilterHelpBrief": "アイテムを検索する",
     "FilterHelpLoadouts": "ロードアウトの名前やノートを検索",
     "FilterHelpMenuItem": "フィルターヘルプ",
