--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -27,11 +27,9 @@
     "OpenInArmory": "voir dans l'armurerie",
     "Season": "Saison {{season}}, Année {{year}}",
     "TrashlistedRolls_one": "Arme indésirable",
-    "TrashlistedRolls_many": "",
     "TrashlistedRolls_other": "{{count, number}} Armes indésirables",
     "Unknown": "Object inconnu",
     "WishlistedRolls_one": "Arme souhaitée",
-    "WishlistedRolls_many": "",
     "WishlistedRolls_other": "{{count, number}} Armes souhaitées",
     "YourItems": "Vos objets"
   },
@@ -67,7 +65,6 @@
     "Remove": "Retirer des notes / retirer des #hashtags",
     "Replace": "Remplacer les notes",
     "Title_one": "Changer les notes de 1 objet",
-    "Title_many": "",
     "Title_other": "Changer les notes de {{count}} objets"
   },
   "BungieAlert": {
@@ -119,7 +116,6 @@
   },
   "Countdown": {
     "Days_one": "1 Jour",
-    "Days_many": "",
     "Days_other": "{{count}} Jours",
     "Days_compact_one": "{{count}}j",
     "Days_compact_other": "{{count}}j"
@@ -129,7 +125,6 @@
     "ImportConfirm": "Êtes-vous sure de vouloir importer des étiquettes/notes depuis un CSV ? Cela écrasera les étiquettes/notes de tout les objets contenus dans votre tableur.",
     "ImportFailed": "Erreur lors de l'importation des étiquettes/notes depuis un CSV: {{error}}",
     "ImportSuccess_one": "Étiquettes/notes chargés pour un objet.",
-    "ImportSuccess_many": "",
     "ImportSuccess_other": "Étiquettes/notes chargés pour {{count}} objets.",
     "ImportWrongFileType": "Le fichier n'est pas un fichier CSV.",
     "WrongFields": "Le CSV doit avoir les colonnes \"Id\", \"Notes\", \"Tag\", et \"Hash\"."
@@ -157,14 +152,12 @@
   },
   "FarmingMode": {
     "D2Desc_one": "DIM empêche les objets d'aller au commis des postes en s'assurant qu'il y aura toujours un espace vide par type d'objet sur {{store}}.",
-    "D2Desc_many": "",
     "D2Desc_other": "DIM empêche les objets d'aller au commis des postes en s'assurant qu'il y aura toujours {{count}} espaces vides par type d'objet sur {{store}}.",
     "D2Desc_female_one": "DIM empêche les objets d'aller au commis des postes en s'assurant qu'il y aura toujours un espace vide par type d'objet sur {{store}}.",
     "D2Desc_female_other": "DIM empêche les objets d'aller au commis des postes en s'assurant qu'il y aura toujours {{count}} espaces vides par type d'objet sur {{store}}.",
     "D2Desc_male_one": "DIM empêche les objets d'aller au commis des postes en s'assurant qu'il y aura toujours un espace vide par type d'objet sur {{store}}.",
     "D2Desc_male_other": "DIM empêche les objets d'aller au commis des postes en s'assurant qu'il y aura toujours {{count}} espaces vides par type d'objet sur {{store}}.",
     "Desc_one": "DIM transfère des engrammes et objets de lumen du {{store}} au coffre et laisse un espace disponible pour chaque type d'objet afin que rien ne soit envoyé au commis des postes.",
-    "Desc_many": "",
     "Desc_other": "DIM transfère des engrammes et objets de lumen du {{store}} au coffre et laisse {{count}} espaces disponibles pour chaque type d'objet afin que rien ne soit envoyé au commis des postes.",
     "Desc_female_one": "DIM transfère des engrammes et objets de lumen du {{store}} au coffre et laisse un espace disponible pour chaque type d'objet afin que rien ne soit envoyé au commis des postes.",
     "Desc_female_other": "DIM transfère des engrammes et objets de lumen du {{store}} au coffre et laisse {{count}} espaces disponibles pour chaque type d'objet afin que rien ne soit envoyé au commis des postes.",
@@ -214,13 +207,10 @@
     "Ascended": "Affiche les objets qui ont eu une ascension.",
     "Breaker": "Filtrer par type d'anti-champion ou par type de champion. breaker:intrinsic affiche les objets qui ont un anti-champion intrinsèque.",
     "BulkClear_one": "Suppression de l'étiquette de 1 objet.",
-    "BulkClear_many": "",
     "BulkClear_other": "Suppression des étiquettes de {{count}} objets.",
     "BulkRevert_one": "Rajout de l'étiquette sur 1 objet.",
-    "BulkRevert_many": "",
     "BulkRevert_other": "Rajout des étiquettes sur {{count}} objets.",
     "BulkTag_one": "Élément sélectionné étiqueté {{tag}}.",
-    "BulkTag_many": "",
     "BulkTag_other": "{{count}} Éléments sélectionnés étiquetés {{tag}}.",
     "Catalyst": "Affiche les catalyseurs selon leur statut. catalyst:complete affiche les catalyseurs que vous avez complétés et appliqués, catalyst:incomplete affiche les catalyseurs que vous avez débloqués mais que vous n'avez soi pas complété soi pas appliqué, et catalyst:missing affiche les objets qui peuvent avoir un catalyseur que vous n'avez pas encore trouvé.",
     "Class": "Affiche les objets en fonction de leur affinité de classe.",
@@ -393,7 +383,6 @@
     "FilterHelpProgress": "Rechercher des jalons et des contrats",
     "FilterHelpRecords": "Rechercher triomphes et collections",
     "FilterMatchCount_one": "1 objet",
-    "FilterMatchCount_many": "",
     "FilterMatchCount_other": "{{count}} objets",
     "Filters": "Filtres",
     "InstallDIM": "Installer en tant qu'application",
@@ -815,7 +804,6 @@
     "InGameActions": "Actions pour équipement en jeu",
     "InGameLoadouts": "Équipements en jeu",
     "ItemErrorSummary_one": "1 erreur d'objet :",
-    "ItemErrorSummary_many": "",
     "ItemErrorSummary_other": "{{count}} erreurs d'objet:",
     "ItemLeveling": "Infusion d'objet",
     "LoadoutName": "Nom de l'équipement",
@@ -826,7 +814,6 @@
     "Loadouts": "Équipements",
     "MakeRoom": "Faire de la place pour le Commis des postes",
     "MakeRoomDone_one": "À Fini de faire de la place pour 1 objet du commis des postes en déplaçant 1 objet hors du {{store}}.",
-    "MakeRoomDone_many": "",
     "MakeRoomDone_other": "À Fini de faire de la place pour {{count}} objets du Commis des postes en déplaçant {{movedNum}} objets hors du {{store}}.",
     "MakeRoomDone_female_one": "À Fini de faire de la place pour 1 objet du commis des postes en déplaçant 1 objet hors du {{store}}.",
     "MakeRoomDone_female_other": "À Fini de faire de la place pour {{count}} objets du Commis des postes en déplaçant {{movedNum}} objets hors du {{store}}.",
@@ -840,18 +827,15 @@
     "MaxSlots": "Vous ne pouvez avoir que {{slots}} {{bucketName}} dans un équipement.",
     "MissingItemsWarning": "Certains objets de cet équipement ne sont plus dans votre inventaire.",
     "ModErrorSummary_one": "1 erreur de mod :",
-    "ModErrorSummary_many": "",
     "ModErrorSummary_other": "{{count}} erreurs de mod:",
     "ModPlacement": {
       "InvalidMods": "Mods invalides",
       "InvalidModsDesc_one": "1 mod ne peut pas être placé dans n'importe quelle pièce d'armure.",
-      "InvalidModsDesc_many": "",
       "InvalidModsDesc_other": "{{count}} mods ne peuvent pas être placés dans n'importe quelle pièce d'armure.",
       "ModPlacement": "Placement des mods",
       "StackableMod": "Cumulable",
       "UnassignedMods": "Mods non assignés",
       "UnassignedModsDesc_one": "1 mod n'a pas pu être placé en raison d'un manque d'énergie ou d'emplacement de mod. L'amélioration de l'énergie de l'armure sélectionnée ne résoudra pas le problème.",
-      "UnassignedModsDesc_many": "",
       "UnassignedModsDesc_other": "{{count}} mods n'ont pas pu être placés en raison d'un manque d'énergie ou d'emplacement de mod. L'amélioration de l'énergie de l'armure sélectionnée ne résoudra pas le problème.",
       "UnstackableMod": "Non cumulable",
       "UpgradeCosts": "Coûts d'amélioration",
@@ -882,7 +866,6 @@
     "PullFromPostmasterError": "Impossible de récupérer du commis des postes: {{error}}.",
     "PullFromPostmasterGeneralError": "Impossible de récupérer tous les objets du commis des postes.",
     "PullFromPostmasterNotification_one": "Récupération de 1 objet du commis des postes vers {{store}}.",
-    "PullFromPostmasterNotification_many": "",
     "PullFromPostmasterNotification_other": "Récupération de {{count}} objets du commis des postes vers {{store}}.",
     "PullFromPostmasterNotification_female_one": "Récupération de 1 objet du commis des postes vers {{store}}.",
     "PullFromPostmasterNotification_female_other": "Récupération de {{count}} objets du commis des postes vers {{store}}.",
@@ -918,10 +901,8 @@
       "NativeShare": "Partager le lien",
       "Notes": "Notes",
       "NumItems_one": "{{count}} objet - les destinataires seront invités à sélectionner un objet similaire dans leur inventaire",
-      "NumItems_many": "",
       "NumItems_other": "{{count}} objets - les destinataires seront invités à sélectionner des objets similaires dans leur inventaire",
       "NumMods_one": "{{count}} mod",
-      "NumMods_many": "",
       "NumMods_other": "{{count}} mods",
       "Placeholder": "Chargement du lien de partage",
       "Subclass": "Personnalisation de la doctrine",
@@ -968,7 +949,7 @@
     "HarmonicModDescription": "L'effet de ce mod a un coût réduis et change d'élément en fonction de la doctrine équipée."
   },
   "MoveAmount": {
-    "Amount": "Quantité\u00a0:"
+    "Amount": "Quantité :"
   },
   "MovePopup": {
     "Acquired": "Cet élément est déverrouillé dans les collections.",
@@ -1138,7 +1119,6 @@
     "PercentMax": "{{pct}}% du maximum",
     "PercentPrestige": "{{pct}}% du rang maximum",
     "PointsUsed_one": "1 point utilisé",
-    "PointsUsed_many": "",
     "PointsUsed_other": "{{count}} points utilisés",
     "PowerBonusHeader": "Récompenses +{{powerBonus}} puissance",
     "PowerBonusHeaderUndefined": "Autres récompenses",
@@ -1150,7 +1130,6 @@
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}pts",
     "Resets_one": "1 réinitialisation",
-    "Resets_many": "",
     "Resets_other": "{{count}} réinitialisations",
     "SeasonalHub": "Hub saisonnier",
     "StatTrackers": "Compteur de Statistiques",
@@ -1252,7 +1231,6 @@
     "SortCustom": "Tri personnalisé",
     "SortName": "Nom",
     "SpacesSize_one": "{{count}} espace",
-    "SpacesSize_many": "",
     "SpacesSize_other": "{{count}} espaces",
     "Theme": "Thème",
     "VaultArmorGroupingStyle": "Séparez les armures sur différentes lignes en fonction de la classe",
@@ -1379,7 +1357,6 @@
     "UpdateInvalidBody": "Les données envoyées à DIM Sync n'étaient pas valides et ne seront pas enregistrées.",
     "UpdateInvalidBodyLoadout": "L'équipement «{{name}}» est invalide et ne sera pas sauvegardé. Si vous l'avez importé depuis un autre site, faites-leur savoir qu'ils exportent des équipements non valides.",
     "UpdateQueueLength_one": "{{count}} nouveau changement sera sauvegardé lorsque nous pourrons nous reconnecter.",
-    "UpdateQueueLength_many": "",
     "UpdateQueueLength_other": "{{count}} nouveaux changements seront sauvegardés lorsque nous pourrons nous reconnecter.",
     "Usage": "DIM utilise {{usage, humanBytes}} sur {{quota, humanBytes}} disponible pour lui sur cet appareil. Cela inclus la base de données d'objets de Destiny téléchargée depuis Bungie.net."
   },
@@ -1517,7 +1494,6 @@
   },
   "WishListRoll": {
     "BestRatedTip_one": "Cet attribut correspond exactement à une arme de votre liste de souhaits.",
-    "BestRatedTip_many": "",
     "BestRatedTip_other": "Ces attributs correspondent exactement à une arme de votre liste de souhaits.",
     "Clear": "Effacer la liste de souhaits",
     "CopiedLine": "Élément de liste de souhaits copié dans le presse-papier",
@@ -1541,7 +1517,6 @@
     "Voltron": "voltron (par défaut)",
     "WishListNotes": "Notes de la liste de souhaits :",
     "WorstRatedTip_one": "Cet attribut correspond exactement à une arme de votre liste d'indésirables.",
-    "WorstRatedTip_many": "",
     "WorstRatedTip_other": "Ces attributs correspondent exactement à une arme de votre liste d'indésirables."
   },
   "wrong-level": "wrong-level"
