--- a/src/locale/zhCHS.json
+++ b/src/locale/zhCHS.json
@@ -26,10 +26,8 @@
     "NoNotes": "无注释",
     "OpenInArmory": "查看武器详情",
     "Season": "年 {{year}}，第 {{season}} 赛季",
-    "TrashlistedRolls_one": "",
     "TrashlistedRolls_other": "{{count, number}} 个垃圾列表特性组合",
     "Unknown": "未知物品",
-    "WishlistedRolls_one": "",
     "WishlistedRolls_other": "{{count, number}} 个愿望清单特性组合",
     "YourItems": "你的物品"
   },
@@ -64,7 +62,6 @@
     "Confirm": "更新备注",
     "Remove": "从备注中删除 / 删除 #标签",
     "Replace": "替换备注",
-    "Title_one": "",
     "Title_other": "更改 {{count}} 个物品的备注"
   },
   "BungieAlert": {
@@ -115,7 +112,6 @@
     "Super": "超能冷却：{{cooldown}}"
   },
   "Countdown": {
-    "Days_one": "",
     "Days_other": "{{count}} 天",
     "Days_compact_other": "{{count}}天"
   },
@@ -123,7 +119,6 @@
     "EmptyFile": "文件中没有行",
     "ImportConfirm": "您确定要从CSV导入标签/笔记？这将覆盖您电子表格中所包含的所有项目/标记。",
     "ImportFailed": "从 CSV 导入标签/注释失败: {{error}}",
-    "ImportSuccess_one": "",
     "ImportSuccess_other": "为{{count}} 个物品加载的标签/注释。",
     "ImportWrongFileType": "此文件不是一个CSV文件。",
     "WrongFields": "CSV文件中必须有'Id', 'Notes', 'Tag', 'Hash'列 (编号, 注释, 标签, 哈希)"
@@ -150,11 +145,9 @@
     "Troubleshooting": "故障排除指南"
   },
   "FarmingMode": {
-    "D2Desc_one": "",
     "D2Desc_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
     "D2Desc_female_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
     "D2Desc_male_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
-    "Desc_one": "",
     "Desc_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
     "Desc_female_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
     "Desc_male_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
@@ -201,11 +194,8 @@
     "ArmorIntrinsic": "显示带有固有特性的传说护甲，例如诡计护甲。",
     "Ascended": "显示可提升光等且已提升的物品。",
     "Breaker": "根据反勇士类型或对应的勇士类型过滤。使用 breaker:instrinsic 搜索具有内置反勇士能力的装备。",
-    "BulkClear_one": "",
     "BulkClear_other": "移除 {{count}} 件物品标签。",
-    "BulkRevert_one": "",
     "BulkRevert_other": "恢复 {{count}} 件物品标签。",
-    "BulkTag_one": "",
     "BulkTag_other": "将 {{count}} 件选择物品标记为 {{tag}}。",
     "Catalyst": "按状态显示催化。catalyst:complete 显示你已解锁并应用的催化，catalyst:incomplete 显示你已解锁但尚未完成目标且应用的催化，而 catalyst:missing 显示你尚未解锁催化的物品。",
     "Class": "按照职业类别显示.",
@@ -377,7 +367,6 @@
     "FilterHelpOptimizer": "选择用于配装的护甲: {{example}}",
     "FilterHelpProgress": "搜索里程碑和悬赏",
     "FilterHelpRecords": "搜索成就和收藏品",
-    "FilterMatchCount_one": "",
     "FilterMatchCount_other": "{{count}} 个物品",
     "Filters": "过滤器",
     "InstallDIM": "安装为 App",
@@ -798,7 +787,6 @@
     "IncludeRuntimeStatBenefitsDesc": "属性洗礼护甲模组会在你拥有护甲充能时提供固定的属性增益。\n在该设置下，DIM 将视此类模组为生效状态，并将其增益用于配装属性的计算和优化。",
     "InGameActions": "游戏内配装操作",
     "InGameLoadouts": "游戏内配装",
-    "ItemErrorSummary_one": "",
     "ItemErrorSummary_other": "{{count}} 个物品出错：",
     "ItemLeveling": "物品等级",
     "LoadoutName": "配装名称",
@@ -808,7 +796,6 @@
     "LoadoutParametersStats": "属性优先级和最低/最高属性范围",
     "Loadouts": "配装",
     "MakeRoom": "为邮政官腾出空间",
-    "MakeRoomDone_one": "",
     "MakeRoomDone_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
     "MakeRoomDone_female_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
     "MakeRoomDone_male_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
@@ -819,16 +806,13 @@
     "MaximizeStat": "最高属性",
     "MaxSlots": "一个配装里最多只能有 {{slots}} 个{{bucketName}}。",
     "MissingItemsWarning": "该配装中部分物品已不在你的背包中。",
-    "ModErrorSummary_one": "",
     "ModErrorSummary_other": "{{count}} 个模组出错：",
     "ModPlacement": {
       "InvalidMods": "无效模组",
-      "InvalidModsDesc_one": "",
       "InvalidModsDesc_other": "有 {{count}} 个模组不能安装到任何护甲上。",
       "ModPlacement": "模组位置",
       "StackableMod": "可叠加",
       "UnassignedMods": "未分配的模组",
-      "UnassignedModsDesc_one": "",
       "UnassignedModsDesc_other": "由于能量容量或模组插槽不足，{{count}} 个模组无法安装。即便为所选护甲升级能量也是如此。",
       "UnstackableMod": "不可叠加",
       "UpgradeCosts": "升级消耗成本",
@@ -858,7 +842,6 @@
     "PullFromPostmaster": "从邮政官处取回物品",
     "PullFromPostmasterError": "无法从邮政官处取回物品:{{error}}.",
     "PullFromPostmasterGeneralError": "无法从邮政官拉取所有物品。",
-    "PullFromPostmasterNotification_one": "",
     "PullFromPostmasterNotification_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
     "PullFromPostmasterNotification_female_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
     "PullFromPostmasterNotification_male_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
@@ -891,9 +874,7 @@
       "LoadoutOptimizer": "配装优化器设置",
       "NativeShare": "分享链接",
       "Notes": "备注",
-      "NumItems_one": "",
       "NumItems_other": "{{count}} 个物品 - 被分享者需要从他们的库存中选择替代物品",
-      "NumMods_one": "",
       "NumMods_other": "{{count}} 个模组",
       "Placeholder": "正在加载分享链接",
       "Subclass": "自定义子职业",
@@ -1093,7 +1074,7 @@
       "Reload": "重新装弹",
       "RPM": "弹夹数每分钟"
     },
-    "Unlock": "解锁\u200b\u200b\u200b\u200b"
+    "Unlock": "解锁​​​​"
   },
   "PostmasterWarningBanner": {
     "PostmasterAlmostFull": "邮政官快满了！({{number}}/{{postmasterSize}}）",
@@ -1109,7 +1090,6 @@
     "PaleHeartPathfinder": "苍白之心寻路者",
     "PercentMax": "{{pct}}% 最大值",
     "PercentPrestige": "重置百分比 {{pct}} %",
-    "PointsUsed_one": "",
     "PointsUsed_other": "已用 {{count}} 点",
     "PowerBonusHeader": "+{{powerBonus}} 光等奖励",
     "PowerBonusHeaderUndefined": "其他奖励",
@@ -1120,7 +1100,6 @@
     "Quests": "任务",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}点",
-    "Resets_one": "",
     "Resets_other": "{{count}} 次重置",
     "SeasonalHub": "赛季中心",
     "StatTrackers": "数据追踪器",
@@ -1142,7 +1121,7 @@
     "Item": "物品搜索历史",
     "Link": "查看和编辑搜索历史",
     "Loadout": "配装搜索历史",
-    "Query": "搜索\u200b\u200b\u200b\u200b",
+    "Query": "搜索​​​​",
     "Title": "搜索历史",
     "UsageCount": "使用次数"
   },
@@ -1221,7 +1200,6 @@
     "SortByWeaponElement": "伤害类型",
     "SortCustom": "自定义排序",
     "SortName": "名称",
-    "SpacesSize_one": "",
     "SpacesSize_other": "{{count}} 个空位",
     "Theme": "主题",
     "VaultArmorGroupingStyle": "将不同职业护甲隔行分开",
@@ -1347,7 +1325,6 @@
     "UpdateInvalid": "未能将数据保存到 DIM 同步",
     "UpdateInvalidBody": "发送至 DIM 同步的数据无效，未被保存。",
     "UpdateInvalidBodyLoadout": "配装 \"{{name}}\" 无效，未被保存。若您从其他网站导入了此配装，请告知发布者其配装无效。",
-    "UpdateQueueLength_one": "",
     "UpdateQueueLength_other": "我们将在能重新连接时保存 {{count}} 个新更改。",
     "Usage": "DIM 使用了此设备{{quota, humanBytes}}可用空间中的{{usage, humanBytes}}.这包括从 bungie. net 下载的命运2物品数据库。"
   },
@@ -1484,7 +1461,6 @@
     }
   },
   "WishListRoll": {
-    "BestRatedTip_one": "",
     "BestRatedTip_other": "这些特性与您愿望清单上的某个武器完全匹配。",
     "Clear": "清除愿望清单",
     "CopiedLine": "已复制愿望清单特性组合到剪贴板",
@@ -1507,7 +1483,6 @@
     "UpdateExternalSource": "添加愿望清单",
     "Voltron": "voltron（默认）",
     "WishListNotes": "愿望清单备注：",
-    "WorstRatedTip_one": "",
     "WorstRatedTip_other": "这些特性与您垃圾清单上的某个武器完全匹配。"
   },
   "wrong-level": "等级错误"
