--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -242,7 +242,7 @@
     "Equipped": "Items that are currently equipped on a character.",
     "Event": "Shows items from which event in Destiny 2 they appeared in.",
     "ExtraPerk": "Shows random-rolled Legendary weapons with an additional selectable perk.",
-    "Featured": "Items that count as one of the \"Featured Items\" in the current season.",
+    "Featured": "Items that count as one of the \"New Gear\" or \"Featured Items\" in the current season.",
     "Filter": "Filter",
     "FilterWith": "Filter with:",
     "Focusable": "Shows items that can be focused at a vendor",
@@ -1042,7 +1042,7 @@
       "Damage": "Damage",
       "Energy": "Energy",
       "Event": "Event",
-      "Featured": "Featured",
+      "Featured": "New Gear",
       "Foundry": "Foundry",
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
@@ -1217,7 +1217,7 @@
     "SortByClassType": "Required Class",
     "SortByCrafted": "Crafted (D2)",
     "SortByDeepsight": "Deepsight (D2)",
-    "SortByFeatured": "Featured (D2)",
+    "SortByFeatured": "New Gear / Featured (D2)",
     "SortByPrimary": "Power level",
     "SortByRarity": "Rarity",
     "SortByRating": "Armor Quality (D1)",
